[UPDATE] upd swagger
